Rename the headers to "Lab 03" and turning off the frame rate counter

--- a/lab3/lab3.WindowsPhone/HubPage.xaml
+++ b/lab3/lab3.WindowsPhone/HubPage.xaml
@@ -73,7 +73,7 @@
     </Page.Resources>
 
     <Grid x:Name="LayoutRoot">
-        <Hub x:Name="Hub" x:Uid="Hub" Header="application name" Background="{ThemeResource HubBackgroundImageBrush}">
+        <Hub x:Name="Hub" x:Uid="Hub" Header="Lab 03" Background="{ThemeResource HubBackgroundImageBrush}">
             <HubSection x:Uid="HubSection1" Header="SECTION 1" DataContext="{Binding Groups}">
                 <DataTemplate>
                     <ListView
