--- a/lab3/lab3.Shared/UserControls/MyUserControl1.xaml
+++ b/lab3/lab3.Shared/UserControls/MyUserControl1.xaml
@@ -14,8 +14,9 @@
                 <TextBlock Margin="20,50,20,0" FontSize="25">Email address</TextBlock>
                 <TextBox Margin="20,0,20,0" x:Name="emailAddressTextBox"></TextBox>
                 <TextBlock Margin="20,20,20,0" FontSize="25">Password</TextBlock>
-                <PasswordBox Margin="20,0,20,0" x:Name="pbx"/>
-                <Button Width="100" Margin="150,20,0,0" HorizontalContentAlignment="Center" x:Name="btnOK" Content="Login" Click="btnOK_Click"/>
-            </StackPanel>
+            <PasswordBox Margin="20,0,20,0" x:Name="passwordTextBox"/>
+            <TextBlock Margin="10,10,20,0" FontSize="25" Visibility="Collapsed" x:Name="errorTextBlock">Email address</TextBlock>
+            <Button Width="100" Margin="150,20,0,0" HorizontalContentAlignment="Center" x:Name="btnOK" Content="Login" Click="btnOK_Click"/>
+        </StackPanel>
     </Grid>
 </UserControl>
