--- a/lab3/lab3.WindowsPhone/HubPage.xaml
+++ b/lab3/lab3.WindowsPhone/HubPage.xaml
@@ -25,7 +25,7 @@
     </Page.Resources>
 
     <Grid x:Name="LayoutRoot">
-        <Hub x:Name="Hub" x:Uid="Hub" Header="Lab 03" Background="{ThemeResource HubBackgroundImageBrush}">
+        <Hub x:Name="Hub" x:Uid="Hub" Header="YouFacePlus" Background="{ThemeResource HubBackgroundImageBrush}">
 
             <HubSection x:Uid="HubSection4" Header="Conversations">
                 <DataTemplate>
@@ -40,8 +40,8 @@
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel>
-                                    <TextBlock Text="{Binding FirstName}" Style="{ThemeResource ListViewItemTextBlockStyle}"/>
-                                    <TextBlock Text="{Binding LastName}" Style="{ThemeResource ListViewItemContentTextBlockStyle}"/>
+                                    <TextBlock Text="{Binding FullName}" Style="{ThemeResource ListViewItemTextBlockStyle}"/>
+                                    <TextBlock Text="{Binding Email}" Style="{ThemeResource ListViewItemContentTextBlockStyle}"/>
                                 </StackPanel>
                             </DataTemplate>
                         </ListView.ItemTemplate>
@@ -51,7 +51,7 @@
 
             <HubSection Header="Map">
                 <DataTemplate>
-                    <Grid>
+                    <Grid Height="550">
                         <Grid.RowDefinitions>
                             <RowDefinition></RowDefinition>
                             <RowDefinition Height="50"></RowDefinition>
@@ -60,7 +60,6 @@
                         <maps:MapControl Loaded="MyMap_OnLoaded" x:Name="MyMap" Grid.Row="0">
 
                         </maps:MapControl>
-                        <Button Grid.Row="1" Tapped="Button_Tapped">Move</Button>
                     </Grid>
                 </DataTemplate>
             </HubSection>
